--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="loading">Memuat...</string>
     <string name="error_message">Gagal memuat data. Silakan coba lagi.</string>
     <string name="surah_name_format">%1$s (%2$s)</string>
+    <string name="search_hint">Cari surah...</string>
 </resources>
